Bug #31581 --> nsMultiMixedConv::BuildURI was calling nsString.Append with a PRInt32. Unfortunately, the compiler was implicitly converting this integer into a PRunichar. this caused us to get the wrong strings for each part.

I simply forced us to use the correct version of append that takes a PRInt32. This fixes the
problems we've been having using bugzilla.

r=none due to the trivial nature of the fix, the severity of the problem and the fact
that I couldn't find an appropriate reviewer.